# mserver

./: .autoexec.vim  Makefile.am  README.md  configure.ac  initscript.vim  lib.h  lib_str.c  main.c  makefile  msend.c  player.c  player.h  playlist.c  playlist.h  server.c
src/: config.h  config.h.in  config.h.in~  lcg.c  lcg.h  lib.c  lib.h  lib_str.c  main.c  msend.c  player.c  playlist.c  playlist.h  server.c  server.h
